          from cache when needed.
    - Cache:
      - [API break] 'get_binary_packages': superseded by new
        'get_binary_package_names' method.
      - [API break] 'get_source_packages': superseded by new
        'get_source_package_names' method.
      - Create Cupt::Cache::Package objects only by demand. Reduced time to
        build a cache by 5-10%.
      - Package:
        - Changed internal structure to hold additonal parameters.
        - [API break] 'o_binary_architecture': removed, not needed anymore.
        - New module option 'o_memoize' to memoize parsed versions.
  * Makefile.PL, debian/control:
    - Dropped dependency on libgraph-perl.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 14 Oct 2009 20:10:26 +0300

cupt (1.0.0) unstable; urgency=low

  * cupt:
    - Action preview prompt:
      - Output also 'Suggests' relation expressions in 'leave unresolved'
        check.
      - Output unresolved dependencies for a dependency group <dep> only if
        the option 'cupt::resolver::keep-<dep>' is set to true.
    - Managing packages:
      - Fixed shell wildcards when scheduling removal of packages which
        are not installed.
  * Cupt:
    - Cache:
      - 'get_original_apt_pin': fixed clashing values which are
        substrings of other pin settings. Thanks to Jameson Graef Rollins
        <jrollins@finestructure.net>. (Closes: #549423)
    - System:
      - Worker:
        - Preparing downloads: don't attempt to create a directory for partial
          downloads when it doesn't exist and simulate mode is on.
  * doc:
    - cupt_vs_apt:
      - Mentioned 'cupt::update::compression-types' in differences.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 14 Oct 2009 18:25:27 +0300

cupt (1.0.0~rc1) unstable; urgency=low

  * cupt:
    - Don't crash when run with no parameters (again). Thanks to Patrick
      Schoenfeld. (Closes: #547952)
    - If the command isn't supplied, act as it was 'help'. Thanks to Patrick